# Rustkernel

./: .gdbinit  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.sh  build.sh.bak  debug.sh  link.x  netdump.bat  production.sh  production_netlog.sh  run.sh  rustc-ice-2025-06-17T04_46_09-62831.txt  rustc-ice-2025-06-17T04_46_24-63149.txt  rustc-ice-2025-06-17T04_47_31-64532.txt  rustc-ice-2025-06-17T04_47_33-64597.txt  rustc-ice-2025-06-17T04_47_46-64883.txt  rustc-ice-2025-06-17T04_48_43-65975.txt  smp.lib  switcher.lib  x86_64-unknown-uefi-debug.json  x86_64-unknown-uefi-debug.json.bak  x86_64-unknown-uefi-debug.json.bak2
.github/workflows/: rust.yml
doc/: BOOTSTAGES
src/: errors.rs  main.rs
src/boot/: config.rs  gop.rs  mod.rs
src/hw/: ata.rs  mod.rs  power.rs  struct.rs
src/hw/acpi/: handler.rs  mod.rs
src/hw/cpu/: gdt.rs  gs.rs  init.rs  interrupt.rs  isr.asm  lapic.rs  mod.rs  smp.asm  smp.rs  syscall.rs  tools.asm
src/hw/graphics/: color.rs  display.rs  mod.rs
src/hw/pci/: .device.rs.kate-swp  bridge.rs  device.rs  header.rs  mod.rs
src/hw/traits/: disk.rs  mod.rs
src/kernel/: boottask.rs  exception.rs  mod.rs  scheduler.rs  switcher.asm  syscall.rs
src/kernel/graphicmanager/: consolelayer.rs  font.rs  image.rs  layer.rs  mod.rs
src/kernel/syscall/: file.rs  graphic.rs  mem.rs  mod.rs
src/mm/: buddy.rs  mod.rs  paging.rs
src/mm/virt/: kerneltable.rs  (+5 more)
src/std/: alloc.rs  console.rs  elf.rs  file.rs  io.rs  log_intern.rs  mod.rs  oldvec.rs  random.rs  reversebytes.rs  utils.rs
src/virt/: mod.rs
(+32 files in other folders)
