[package]
name = "Secondtry"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[dependencies]
acpi = { version = "*", features = [], default-features = false }
crc = "*"
paste = "*"
uefi = { version = "*", features = [], default-features = false }
uefi-raw = "*"
elf_rs = "*"

[build]
rustflags = ["link-args=-Tlink.x", "-C", "/debug:dwarf", "relocation-model=pie", "code-model=kernel", "opt-level=1", "lto=yes"]
target = "x86_64-unknown-uefi"
