[package]
name = "Secondtry"
version = "0.2.0"
edition = "2024"

[profile.dev]
panic = "abort"

[dependencies]
acpi = { version = "*", features = [], default-features = false }
crc = "*"
paste = "*"
uefi = { version = "*", features = [] }
elf_rs = "*"
enum-iterator = "*"

[build]
target = "x86_64-unknown-uefi"
